Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,11 @@ jobs:
       command: 'restore'
       feedsToUse: 'select'
 
+  - task: DotNetCoreCLI@2
+    displayName: 'dotnet build'
+    inputs:
+      command: 'build'
+
   - task: CmdLine@2
     displayName: 'docfx build'
     inputs:
